--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--
 Author: Keenthemes
 Product Name: Jet HTML Pro - Bootstrap 5 HTML Multipurpose Admin Dashboard Theme 
-Purchase: https://keenthemes.com/products/jayroguerrs.github.io
+Purchase: https://keenthemes.com/productsjayroguerrs.github.io
 Website: http://www.keenthemes.com
 Contact: support@keenthemes.com
 Follow: www.twitter.com/keenthemes
@@ -22,16 +22,16 @@ License: For each use you must have a valid license purchased only from above li
 		<meta property="og:locale" content="en_US" />
 		<meta property="og:type" content="article" />
 		<meta property="og:title" content="Jet HTML Pro - Bootstrap 5 HTML Multipurpose Admin Dashboard Theme" />
-		<meta property="og:url" content="https://keenthemes.com/products/jayroguerrs.github.io" />
+		<meta property="og:url" content="https://keenthemes.com/productsjayroguerrs.github.io" />
 		<meta property="og:site_name" content="Keenthemes | Jet HTML Pro" />
-		<link rel="canonical" href="https://preview.keenthemes.com/jayroguerrs.github.io" />
-		<link rel="shortcut icon" href="/jayroguerrs.github.io/assets/media/logos/favicon.ico" />
+		<link rel="canonical" href="https://preview.keenthemes.comjayroguerrs.github.io" />
+		<link rel="shortcut icon" href="jayroguerrs.github.io/assets/media/logos/favicon.ico" />
 		<!--begin::Fonts-->
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700" />
 		<!--end::Fonts-->
 		<!--begin::Global Stylesheets Bundle(used by all pages)-->
-		<link href="/jayroguerrs.github.io/assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
-		<link href="/jayroguerrs.github.io/assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
+		<link href="jayroguerrs.github.io/assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
+		<link href="jayroguerrs.github.io/assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
 		<!--end::Global Stylesheets Bundle-->
 		<!--Begin::Google Tag Manager -->
 		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&amp;l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5FS8GGP');</script>
@@ -48,18 +48,18 @@ License: For each use you must have a valid license purchased only from above li
 		<!--begin::Main-->
 		<div class="d-flex flex-column flex-root">
 			<!--begin::Authentication - Sign-in -->
-			<div class="d-flex flex-column flex-column-fluid bgi-position-y-bottom position-x-center bgi-no-repeat bgi-size-contain bgi-attachment-fixed" style="background-image: url(/jayroguerrs.github.io/assets/media/illustrations/sigma-1/14.png)">
+			<div class="d-flex flex-column flex-column-fluid bgi-position-y-bottom position-x-center bgi-no-repeat bgi-size-contain bgi-attachment-fixed" style="background-image: url(jayroguerrs.github.io/assets/media/illustrations/sigma-1/14.png)">
 				<!--begin::Content-->
 				<div class="d-flex flex-center flex-column flex-column-fluid p-10 pb-lg-20">
 					<!--begin::Logo-->
-					<a href="/jayroguerrs.github.io/index" class="mb-12">
-						<img alt="Logo" src="/jayroguerrs.github.io/assets/media/logos/logo-default.svg" class="h-60px" />
+					<a href="jayroguerrs.github.io/index" class="mb-12">
+						<img alt="Logo" src="jayroguerrs.github.io/assets/media/logos/logo-default.svg" class="h-60px" />
 					</a>
 					<!--end::Logo-->
 					<!--begin::Wrapper-->
 					<div class="w-lg-500px bg-body rounded shadow-sm p-10 p-lg-15 mx-auto">
 						<!--begin::Form-->
-						<form class="form w-100" novalidate="novalidate" id="kt_sign_in_form" data-kt-redirect-url="/jayroguerrs.github.io/index" action="#">
+						<form class="form w-100" novalidate="novalidate" id="kt_sign_in_form" data-kt-redirect-url="jayroguerrs.github.io/index" action="#">
 							<!--begin::Heading-->
 							<div class="text-center mb-10">
 								<!--begin::Title-->
@@ -67,7 +67,7 @@ License: For each use you must have a valid license purchased only from above li
 								<!--end::Title-->
 								<!--begin::Link-->
 								<div class="text-gray-400 fw-bold fs-4">New Here? 
-								<a href="/jayroguerrs.github.io/authentication/base/sign-up" class="link-primary fw-bolder">Create an Account</a></div>
+								<a href="jayroguerrs.github.io/authentication/base/sign-up" class="link-primary fw-bolder">Create an Account</a></div>
 								<!--end::Link-->
 							</div>
 							<!--begin::Heading-->
@@ -89,7 +89,7 @@ License: For each use you must have a valid license purchased only from above li
 									<label class="form-label fw-bolder text-dark fs-6 mb-0">Password</label>
 									<!--end::Label-->
 									<!--begin::Link-->
-									<a href="/jayroguerrs.github.io/authentication/base/password-reset" class="link-primary fs-6 fw-bolder">Forgot Password ?</a>
+									<a href="jayroguerrs.github.io/authentication/base/password-reset" class="link-primary fs-6 fw-bolder">Forgot Password ?</a>
 									<!--end::Link-->
 								</div>
 								<!--end::Wrapper-->
@@ -112,15 +112,15 @@ License: For each use you must have a valid license purchased only from above li
 								<!--end::Separator-->
 								<!--begin::Google link-->
 								<a href="#" class="btn btn-flex flex-center btn-light btn-lg w-100 mb-5">
-								<img alt="Logo" src="/jayroguerrs.github.io/assets/media/svg/brand-logos/google-icon.svg" class="h-20px me-3" />Continue with Google</a>
+								<img alt="Logo" src="jayroguerrs.github.io/assets/media/svg/brand-logos/google-icon.svg" class="h-20px me-3" />Continue with Google</a>
 								<!--end::Google link-->
 								<!--begin::Google link-->
 								<a href="#" class="btn btn-flex flex-center btn-light btn-lg w-100 mb-5">
-								<img alt="Logo" src="/jayroguerrs.github.io/assets/media/svg/brand-logos/facebook-4.svg" class="h-20px me-3" />Continue with Facebook</a>
+								<img alt="Logo" src="jayroguerrs.github.io/assets/media/svg/brand-logos/facebook-4.svg" class="h-20px me-3" />Continue with Facebook</a>
 								<!--end::Google link-->
 								<!--begin::Google link-->
 								<a href="#" class="btn btn-flex flex-center btn-light btn-lg w-100">
-								<img alt="Logo" src="/jayroguerrs.github.io/assets/media/svg/brand-logos/apple-black.svg" class="h-20px me-3" />Continue with Apple</a>
+								<img alt="Logo" src="jayroguerrs.github.io/assets/media/svg/brand-logos/apple-black.svg" class="h-20px me-3" />Continue with Apple</a>
 								<!--end::Google link-->
 							</div>
 							<!--end::Actions-->
@@ -136,7 +136,7 @@ License: For each use you must have a valid license purchased only from above li
 					<div class="d-flex align-items-center fw-bold fs-6">
 						<a href="https://keenthemes.com" class="text-muted text-hover-primary px-2">About</a>
 						<a href="https://devs.keenthemes.com" class="text-muted text-hover-primary px-2">Support</a>
-						<a href="https://keenthemes.com/products/jayroguerrs.github.io" class="text-muted text-hover-primary px-2">Purchase</a>
+						<a href="https://keenthemes.com/productsjayroguerrs.github.io" class="text-muted text-hover-primary px-2">Purchase</a>
 					</div>
 					<!--end::Links-->
 				</div>
@@ -146,13 +146,13 @@ License: For each use you must have a valid license purchased only from above li
 		</div>
 		<!--end::Main-->
 		<!--begin::Javascript-->
-		<script>var hostUrl = "/jayroguerrs.github.io/assets/";</script>
+		<script>var hostUrl = "jayroguerrs.github.io/assets/";</script>
 		<!--begin::Global Javascript Bundle(used by all pages)-->
-		<script src="/jayroguerrs.github.io/assets/plugins/global/plugins.bundle.js"></script>
-		<script src="/jayroguerrs.github.io/assets/js/scripts.bundle.js"></script>
+		<script src="jayroguerrs.github.io/assets/plugins/global/plugins.bundle.js"></script>
+		<script src="jayroguerrs.github.io/assets/js/scripts.bundle.js"></script>
 		<!--end::Global Javascript Bundle-->
 		<!--begin::Page Custom Javascript(used by this page)-->
-		<script src="/jayroguerrs.github.io/assets/js/custom/authentication/sign-in/general.js"></script>
+		<script src="jayroguerrs.github.io/assets/js/custom/authentication/sign-in/general.js"></script>
 		<!--end::Page Custom Javascript-->
 		<!--end::Javascript-->
 	</body>
