--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 
 <!DOCTYPE html>
 <!--
-Author: Keenthemes
-Product Name: Jet HTML Pro - Bootstrap 5 HTML Multipurpose Admin Dashboard Theme 
-Purchase: https://keenthemes.com/products
-Website: http://www.keenthemes.com
-Contact: support@keenthemes.com
-Follow: www.twitter.com/keenthemes
-Dribbble: www.dribbble.com/keenthemes
-Like: www.facebook.com/keenthemes
-License: For each use you must have a valid license purchased only from above link in order to legally use the theme for your project.
+Author: JAYRO GUERREROS
+Product Name: ADMIN - MODAS MARLENCH
+Purchase: 
+Website: 
+Contact: jguerreros@pucp.edu.pe
+Follow: www.facebook.com/codacodpe
+instagram: www.instagram.com/codacodpe
 -->
 <html lang="en">
 	<!--begin::Head-->
@@ -63,21 +61,21 @@ License: For each use you must have a valid license purchased only from above li
 							<!--begin::Heading-->
 							<div class="text-center mb-10">
 								<!--begin::Title-->
-								<h1 class="text-dark mb-3">Sign In to Jet HTML Pro</h1>
+								<h1 class="text-dark mb-3">Ingreso a Modas Marlench</h1>
 								<!--end::Title-->
 								<!--begin::Link-->
-								<div class="text-gray-400 fw-bold fs-4">New Here? 
-								<a href="/authentication/base/sign-up" class="link-primary fw-bolder">Create an Account</a></div>
+								<div class="text-gray-400 fw-bold fs-4">¿Nuevo aquí? 
+								<a href="/authentication/base/sign-up" class="link-primary fw-bolder">Cree una cuenta</a></div>
 								<!--end::Link-->
 							</div>
 							<!--begin::Heading-->
 							<!--begin::Input group-->
 							<div class="fv-row mb-10">
 								<!--begin::Label-->
-								<label class="form-label fs-6 fw-bolder text-dark">Email</label>
+								<label class="form-label fs-6 fw-bolder text-dark">Usuario</label>
 								<!--end::Label-->
 								<!--begin::Input-->
-								<input class="form-control form-control-lg form-control-solid" type="text" name="email" autocomplete="off" />
+								<input class="form-control form-control-lg form-control-solid" type="text" name="user" autocomplete="off" />
 								<!--end::Input-->
 							</div>
 							<!--end::Input group-->
@@ -86,10 +84,10 @@ License: For each use you must have a valid license purchased only from above li
 								<!--begin::Wrapper-->
 								<div class="d-flex flex-stack mb-2">
 									<!--begin::Label-->
-									<label class="form-label fw-bolder text-dark fs-6 mb-0">Password</label>
+									<label class="form-label fw-bolder text-dark fs-6 mb-0">Contraseña</label>
 									<!--end::Label-->
 									<!--begin::Link-->
-									<a href="/authentication/base/password-reset" class="link-primary fs-6 fw-bolder">Forgot Password ?</a>
+									<a href="/authentication/base/password-reset" class="link-primary fs-6 fw-bolder">¿Olvidó su contraseña?</a>
 									<!--end::Link-->
 								</div>
 								<!--end::Wrapper-->
@@ -102,26 +100,11 @@ License: For each use you must have a valid license purchased only from above li
 							<div class="text-center">
 								<!--begin::Submit button-->
 								<button type="submit" id="kt_sign_in_submit" class="btn btn-lg btn-primary w-100 mb-5">
-									<span class="indicator-label">Continue</span>
-									<span class="indicator-progress">Please wait... 
+									<span class="indicator-label">Continuar</span>
+									<span class="indicator-progress">Por favor espere... 
 									<span class="spinner-border spinner-border-sm align-middle ms-2"></span></span>
 								</button>
-								<!--end::Submit button-->
-								<!--begin::Separator-->
-								<div class="text-center text-muted text-uppercase fw-bolder mb-5">or</div>
-								<!--end::Separator-->
-								<!--begin::Google link-->
-								<a href="#" class="btn btn-flex flex-center btn-light btn-lg w-100 mb-5">
-								<img alt="Logo" src="assets/media/svg/brand-logos/google-icon.svg" class="h-20px me-3" />Continue with Google</a>
-								<!--end::Google link-->
-								<!--begin::Google link-->
-								<a href="#" class="btn btn-flex flex-center btn-light btn-lg w-100 mb-5">
-								<img alt="Logo" src="assets/media/svg/brand-logos/facebook-4.svg" class="h-20px me-3" />Continue with Facebook</a>
-								<!--end::Google link-->
-								<!--begin::Google link-->
-								<a href="#" class="btn btn-flex flex-center btn-light btn-lg w-100">
-								<img alt="Logo" src="assets/media/svg/brand-logos/apple-black.svg" class="h-20px me-3" />Continue with Apple</a>
-								<!--end::Google link-->
+								<!--end::Submit button-->																
 							</div>
 							<!--end::Actions-->
 						</form>
