--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@ instagram: www.instagram.com/codacodpe
 				<div class="d-flex flex-center flex-column-auto p-10">
 					<!--begin::Links-->
 					<div class="d-flex align-items-center fw-bold fs-6">
-						<a href="https://keenthemes.com" class="text-muted text-hover-primary px-2">About</a>
-						<a href="https://devs.keenthemes.com" class="text-muted text-hover-primary px-2">Support</a>
-						<a href="https://keenthemes.com/products" class="text-muted text-hover-primary px-2">Purchase</a>
+						<a href="#" class="text-muted text-hover-primary px-2">Sobre nosotros</a>
+						<a href="#" class="text-muted text-hover-primary px-2">Soporte</a>
+						<a href="#" class="text-muted text-hover-primary px-2">Compras</a>
 					</div>
 					<!--end::Links-->
 				</div>
