--- a/authentication/sign-in/password-reset.html
+++ b/authentication/sign-in/password-reset.html
@@ -3,7 +3,7 @@
 <!--
 Author: Keenthemes
 Product Name: Jet HTML Pro - Bootstrap 5 HTML Multipurpose Admin Dashboard Theme 
-Purchase: https://keenthemes.com/products/jet-master
+Purchase: https://keenthemes.com/products/jayroguerrs.github.io
 Website: http://www.keenthemes.com
 Contact: support@keenthemes.com
 Follow: www.twitter.com/keenthemes
@@ -22,16 +22,16 @@ License: For each use you must have a valid license purchased only from above li
 		<meta property="og:locale" content="en_US" />
 		<meta property="og:type" content="article" />
 		<meta property="og:title" content="Jet HTML Pro - Bootstrap 5 HTML Multipurpose Admin Dashboard Theme" />
-		<meta property="og:url" content="https://keenthemes.com/products/jet-master" />
+		<meta property="og:url" content="https://keenthemes.com/products/jayroguerrs.github.io" />
 		<meta property="og:site_name" content="Keenthemes | Jet HTML Pro" />
-		<link rel="canonical" href="https://preview.keenthemes.com/jet-master" />
-		<link rel="shortcut icon" href="/jet-master/assets/media/logos/favicon.ico" />
+		<link rel="canonical" href="https://preview.keenthemes.com/jayroguerrs.github.io" />
+		<link rel="shortcut icon" href="/jayroguerrs.github.io/assets/media/logos/favicon.ico" />
 		<!--begin::Fonts-->
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700" />
 		<!--end::Fonts-->
 		<!--begin::Global Stylesheets Bundle(used by all pages)-->
-		<link href="/jet-master/assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
-		<link href="/jet-master/assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
+		<link href="/jayroguerrs.github.io/assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
+		<link href="/jayroguerrs.github.io/assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
 		<!--end::Global Stylesheets Bundle-->
 		<!--Begin::Google Tag Manager -->
 		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&amp;l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5FS8GGP');</script>
@@ -48,12 +48,12 @@ License: For each use you must have a valid license purchased only from above li
 		<!--begin::Main-->
 		<div class="d-flex flex-column flex-root">
 			<!--begin::Authentication - Password reset -->
-			<div class="d-flex flex-column flex-column-fluid bgi-position-y-bottom position-x-center bgi-no-repeat bgi-size-contain bgi-attachment-fixed" style="background-image: url(/jet-master/assets/media/illustrations/sigma-1/14.png)">
+			<div class="d-flex flex-column flex-column-fluid bgi-position-y-bottom position-x-center bgi-no-repeat bgi-size-contain bgi-attachment-fixed" style="background-image: url(/jayroguerrs.github.io/assets/media/illustrations/sigma-1/14.png)">
 				<!--begin::Content-->
 				<div class="d-flex flex-center flex-column flex-column-fluid p-10 pb-lg-20">
 					<!--begin::Logo-->
-					<a href="/jet-master/index" class="mb-12">
-						<img alt="Logo" src="/jet-master/assets/media/logos/logo-default.svg" class="h-60px" />
+					<a href="/jayroguerrs.github.io/index" class="mb-12">
+						<img alt="Logo" src="/jayroguerrs.github.io/assets/media/logos/logo-default.svg" class="h-60px" />
 					</a>
 					<!--end::Logo-->
 					<!--begin::Wrapper-->
@@ -83,7 +83,7 @@ License: For each use you must have a valid license purchased only from above li
 									<span class="indicator-progress">Please wait... 
 									<span class="spinner-border spinner-border-sm align-middle ms-2"></span></span>
 								</button>
-								<a href="/jet-master/authentication/base/sign-in" class="btn btn-lg btn-light-primary fw-bolder">Cancel</a>
+								<a href="/jayroguerrs.github.io/authentication/base/sign-in" class="btn btn-lg btn-light-primary fw-bolder">Cancel</a>
 							</div>
 							<!--end::Actions-->
 						</form>
@@ -98,7 +98,7 @@ License: For each use you must have a valid license purchased only from above li
 					<div class="d-flex align-items-center fw-bold fs-6">
 						<a href="https://keenthemes.com" class="text-muted text-hover-primary px-2">About</a>
 						<a href="https://devs.keenthemes.com" class="text-muted text-hover-primary px-2">Support</a>
-						<a href="https://keenthemes.com/products/jet-master" class="text-muted text-hover-primary px-2">Purchase</a>
+						<a href="https://keenthemes.com/products/jayroguerrs.github.io" class="text-muted text-hover-primary px-2">Purchase</a>
 					</div>
 					<!--end::Links-->
 				</div>
@@ -108,13 +108,13 @@ License: For each use you must have a valid license purchased only from above li
 		</div>
 		<!--end::Main-->
 		<!--begin::Javascript-->
-		<script>var hostUrl = "/jet-master/assets/";</script>
+		<script>var hostUrl = "/jayroguerrs.github.io/assets/";</script>
 		<!--begin::Global Javascript Bundle(used by all pages)-->
-		<script src="/jet-master/assets/plugins/global/plugins.bundle.js"></script>
-		<script src="/jet-master/assets/js/scripts.bundle.js"></script>
+		<script src="/jayroguerrs.github.io/assets/plugins/global/plugins.bundle.js"></script>
+		<script src="/jayroguerrs.github.io/assets/js/scripts.bundle.js"></script>
 		<!--end::Global Javascript Bundle-->
 		<!--begin::Page Custom Javascript(used by this page)-->
-		<script src="/jet-master/assets/js/custom/authentication/password-reset/password-reset.js"></script>
+		<script src="/jayroguerrs.github.io/assets/js/custom/authentication/password-reset/password-reset.js"></script>
 		<!--end::Page Custom Javascript-->
 		<!--end::Javascript-->
 	</body>
