--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@ instagram: www.instagram.com/codacodpe
 		<meta property="og:url" content="https://keenthemes.com/products" />
 		<meta property="og:site_name" content="Keenthemes | Jet HTML Pro" />
 		<link rel="canonical" href="https://preview.keenthemes.com" />
-		<link rel="shortcut icon" href="assets/media/logos/favicon.ico" />
+		<link rel="shortcut icon" href="/jet-master/assets/media/logos/favicon.ico" />
 		<!--begin::Fonts-->
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700" />
 		<!--end::Fonts-->
 		<!--begin::Global Stylesheets Bundle(used by all pages)-->
-		<link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
-		<link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
+		<link href="/jet-master/assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
+		<link href="/jet-master/assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
 		<!--end::Global Stylesheets Bundle-->
 		<!--Begin::Google Tag Manager -->
 		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&amp;l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5FS8GGP');</script>
@@ -51,7 +51,7 @@ instagram: www.instagram.com/codacodpe
 				<div class="d-flex flex-center flex-column flex-column-fluid p-10 pb-lg-20">
 					<!--begin::Logo-->
 					<a href="/index" class="mb-12">
-						<img alt="Logo" src="assets/media/logos/logo-default.svg" class="h-60px" />
+						<img alt="Logo" src="/jet-master/assets/media/logos/logo-default.svg" class="h-60px" />
 					</a>
 					<!--end::Logo-->
 					<!--begin::Wrapper-->
@@ -129,13 +129,13 @@ instagram: www.instagram.com/codacodpe
 		</div>
 		<!--end::Main-->
 		<!--begin::Javascript-->
-		<script>var hostUrl = "assets/";</script>
+		<script>var hostUrl = "/jet-master/assets/";</script>
 		<!--begin::Global Javascript Bundle(used by all pages)-->
-		<script src="assets/plugins/global/plugins.bundle.js"></script>
-		<script src="assets/js/scripts.bundle.js"></script>
+		<script src="/jet-master/assets/plugins/global/plugins.bundle.js"></script>
+		<script src="/jet-master/assets/js/scripts.bundle.js"></script>
 		<!--end::Global Javascript Bundle-->
 		<!--begin::Page Custom Javascript(used by this page)-->
-		<script src="assets/js/custom/authentication/sign-in/general.js"></script>
+		<script src="/jet-master/assets/js/custom/authentication/sign-in/general.js"></script>
 		<!--end::Page Custom Javascript-->
 		<!--end::Javascript-->
 	</body>
