--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ instagram: www.instagram.com/codacodpe
 					<!--begin::Wrapper-->
 					<div class="w-lg-500px bg-body rounded shadow-sm p-10 p-lg-15 mx-auto">
 						<!--begin::Form-->
-						<form class="form w-100" novalidate="novalidate" id="kt_sign_in_form" data-kt-redirect-url="/index" action="#">
+						<form class="form w-100" novalidate="novalidate" id="kt_sign_in_form" data-kt-redirect-url="jet-master/index.html" action="#">
 							<!--begin::Heading-->
 							<div class="text-center mb-10">
 								<!--begin::Title-->
