--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@ instagram: www.instagram.com/codacodpe
 	<head>
 		<title>Jet HTML Pro - Bootstrap 5 HTML Multipurpose Admin Dashboard Theme by Keenthemes</title>
 		<meta charset="utf-8" />
-		<meta name="description" content="Jet admin dashboard live demo. Check out all the features of the admin panel. A large number of settings, additional services and widgets." />
-		<meta name="keywords" content="Jet theme, bootstrap, bootstrap 5, admin themes, free admin themes, bootstrap admin, bootstrap dashboard" />
+		<meta name="description" content="Marlench App es una aplicación de apoyo a los colaboradores del banco BBVA para la automatización de solicitud de prendas" />
+		<meta name="keywords" content="Marlench App, BBVA, Modas Marlench" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta property="og:locale" content="en_US" />
 		<meta property="og:type" content="article" />
-		<meta property="og:title" content="Jet HTML Pro - Bootstrap 5 HTML Multipurpose Admin Dashboard Theme" />
-		<meta property="og:url" content="https://keenthemes.com/products" />
-		<meta property="og:site_name" content="Keenthemes | Jet HTML Pro" />
-		<link rel="canonical" href="https://preview.keenthemes.com" />
+		<meta property="og:title" content="Marlench App - Portal de solicitud de prendas para colaboradores del banco BBVA" />
+		<meta property="og:url" content="" />
+		<meta property="og:site_name" content="Marlench App | BBVA" />
+		<link rel="canonical" href="" />
 		<link rel="shortcut icon" href="/jet-master/assets/media/logos/favicon.ico" />
 		<!--begin::Fonts-->
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700" />
