--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ instagram: www.instagram.com/codacodpe
 <html lang="en">
 	<!--begin::Head-->
 	<head>
-		<title>Jet HTML Pro - Bootstrap 5 HTML Multipurpose Admin Dashboard Theme by Keenthemes</title>
+		<title>Marlench APP - Registro</title>
 		<meta charset="utf-8" />
 		<meta name="description" content="Marlench App es una aplicación de apoyo a los colaboradores del banco BBVA para la automatización de solicitud de prendas" />
 		<meta name="keywords" content="Marlench App, BBVA, Modas Marlench" />
@@ -87,7 +87,7 @@ instagram: www.instagram.com/codacodpe
 									<label class="form-label fw-bolder text-dark fs-6 mb-0">Contraseña</label>
 									<!--end::Label-->
 									<!--begin::Link-->
-									<a href="authentication/sign-in/password-reset" class="link-primary fs-6 fw-bolder">¿Olvidó su contraseña?</a>
+									<a href="authentication/sign-in/password-reset.html" class="link-primary fs-6 fw-bolder">¿Olvidó su contraseña?</a>
 									<!--end::Link-->
 								</div>
 								<!--end::Wrapper-->
