--- a/jet-master/authentication/sign-in/password-reset.html
+++ b/jet-master/authentication/sign-in/password-reset.html
@@ -12,7 +12,7 @@ instagram: www.instagram.com/codacodpe
 <html lang="en">
 	<!--begin::Head-->
 	<head>
-		<title>Marlench App - Restablecer contraseña</title>
+		<title>Marlench App - Restablecer</title>
 		<meta charset="utf-8" />
 		<meta name="description" content="Jet admin dashboard live demo. Check out all the features of the admin panel. A large number of settings, additional services and widgets." />
 		<meta name="keywords" content="Jet theme, bootstrap, bootstrap 5, admin themes, free admin themes, bootstrap admin, bootstrap dashboard" />
@@ -61,27 +61,27 @@ instagram: www.instagram.com/codacodpe
 							<!--begin::Heading-->
 							<div class="text-center mb-10">
 								<!--begin::Title-->
-								<h1 class="text-dark mb-3">Forgot Password ?</h1>
+								<h1 class="text-dark mb-3">¿ Olvidó su contraseña ?</h1>
 								<!--end::Title-->
 								<!--begin::Link-->
-								<div class="text-gray-400 fw-bold fs-4">Enter your email to reset your password.</div>
+								<div class="text-gray-400 fw-bold fs-4">Ingrese su correo institucional</div>
 								<!--end::Link-->
 							</div>
 							<!--begin::Heading-->
 							<!--begin::Input group-->
 							<div class="fv-row mb-10">
 								<label class="form-label fw-bolder text-gray-900 fs-6">Email</label>
-								<input class="form-control form-control-solid" type="email" placeholder="" name="email" autocomplete="off" />
+								<input class="form-control form-control-solid" type="email" placeholder="juanperez@bbva.com.pe" name="email" autocomplete="off" />
 							</div>
 							<!--end::Input group-->
 							<!--begin::Actions-->
 							<div class="d-flex flex-wrap justify-content-center pb-lg-0">
 								<button type="button" id="kt_password_reset_submit" class="btn btn-lg btn-primary fw-bolder me-4">
-									<span class="indicator-label">Submit</span>
-									<span class="indicator-progress">Please wait... 
+									<span class="indicator-label">Enviar</span>
+									<span class="indicator-progress">Por favor espere... 
 									<span class="spinner-border spinner-border-sm align-middle ms-2"></span></span>
 								</button>
-								<a href="/jet-master/authentication/base/sign-in" class="btn btn-lg btn-light-primary fw-bolder">Cancel</a>
+								<a href="/jet-master/authentication/base/sign-in" class="btn btn-lg btn-light-primary fw-bolder">Cancelar</a>
 							</div>
 							<!--end::Actions-->
 						</form>
@@ -94,9 +94,9 @@ instagram: www.instagram.com/codacodpe
 				<div class="d-flex flex-center flex-column-auto p-10">
 					<!--begin::Links-->
 					<div class="d-flex align-items-center fw-bold fs-6">
-						<a href="https://keenthemes.com" class="text-muted text-hover-primary px-2">About</a>
-						<a href="https://devs.keenthemes.com" class="text-muted text-hover-primary px-2">Support</a>
-						<a href="https://keenthemes.com/products/jet-master" class="text-muted text-hover-primary px-2">Purchase</a>
+						<a href="#" class="text-muted text-hover-primary px-2">Sobre nosotros</a>
+						<a href="#" class="text-muted text-hover-primary px-2">Soporte</a>
+						<a href="#" class="text-muted text-hover-primary px-2">Compras</a>
 					</div>
 					<!--end::Links-->
 				</div>
