--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <!--
 Author: JAYRO GUERREROS
@@ -10,134 +9,153 @@ Follow: www.facebook.com/codacodpe
 instagram: www.instagram.com/codacodpe
 -->
 <html lang="en">
-	<!--begin::Head-->
-	<head>
-		<title>Marlench APP - Registro</title>
-		<meta charset="utf-8" />
-		<meta name="description" content="Marlench App es una aplicación de apoyo a los colaboradores del banco BBVA para la automatización de solicitud de prendas" />
-		<meta name="keywords" content="Marlench App, BBVA, Modas Marlench" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta property="og:locale" content="en_US" />
-		<meta property="og:type" content="article" />
-		<meta property="og:title" content="Marlench App - Portal de solicitud de prendas para colaboradores del banco BBVA" />
-		<meta property="og:url" content="" />
-		<meta property="og:site_name" content="Marlench App | BBVA" />
-		<link rel="canonical" href="" />
-		<link rel="shortcut icon" href="/jet-master/assets/media/logos/favicon.ico" />
-		<!--begin::Fonts-->
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700" />
-		<!--end::Fonts-->
-		<!--begin::Global Stylesheets Bundle(used by all pages)-->
-		<link href="/jet-master/assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
-		<link href="/jet-master/assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
-		<!--end::Global Stylesheets Bundle-->
-		<!--Begin::Google Tag Manager -->
-		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&amp;l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5FS8GGP');</script>
-		<!--End::Google Tag Manager -->
-	</head>
-	<!--end::Head-->
-	<!--begin::Body-->
-	<body id="kt_body" class="auth-bg">
-		<!--Begin::Google Tag Manager (noscript) -->
-		<noscript>
+<!--begin::Head-->
+
+<head>
+    <title>Marlench APP - Registro</title>
+    <meta charset="utf-8" />
+    <meta name="description" content="Marlench App es una aplicación de apoyo a los colaboradores del banco BBVA para la automatización de solicitud de prendas" />
+    <meta name="keywords" content="Marlench App, BBVA, Modas Marlench" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Marlench App - Portal de solicitud de prendas para colaboradores del banco BBVA" />
+    <meta property="og:url" content="" />
+    <meta property="og:site_name" content="Marlench App | BBVA" />
+    <link rel="canonical" href="" />
+    <link rel="shortcut icon" href="/jet-master/assets/media/logos/favicon.ico" />
+    <!--begin::Fonts-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700" />
+    <!--end::Fonts-->
+    <!--begin::Global Stylesheets Bundle(used by all pages)-->
+    <link href="/jet-master/assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
+    <link href="/jet-master/assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
+    <!--end::Global Stylesheets Bundle-->
+    <!--Begin::Google Tag Manager -->
+    <script>
+        (function(w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start': new Date().getTime(),
+                event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != 'dataLayer' ? '&amp;l=' + l : '';
+            j.async = true;
+            j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-5FS8GGP');
+    </script>
+    <!--End::Google Tag Manager -->
+</head>
+<!--end::Head-->
+<!--begin::Body-->
+
+<body id="kt_body" class="auth-bg">
+    <!--Begin::Google Tag Manager (noscript) -->
+    <noscript>
 			<iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5FS8GGP" height="0" width="0" style="display:none;visibility:hidden"></iframe>
 		</noscript>
-		<!--End::Google Tag Manager (noscript) -->
-		<!--begin::Main-->
-		<div class="d-flex flex-column flex-root">
-			<!--begin::Authentication - Sign-in -->
-			<div class="d-flex flex-column flex-column-fluid bgi-position-y-bottom position-x-center bgi-no-repeat bgi-size-contain bgi-attachment-fixed" style="background-image: url(/jet-master/assets/media/illustrations/sigma-1/14.png)">
-				<!--begin::Content-->
-				<div class="d-flex flex-center flex-column flex-column-fluid p-10 pb-lg-20">
-					<!--begin::Logo-->
-					<a href="/index" class="mb-12">
-						<img alt="Logo" src="/jet-master/assets/media/logos/logo-default.svg" class="h-60px" />
-					</a>
-					<!--end::Logo-->
-					<!--begin::Wrapper-->
-					<div class="w-lg-500px bg-body rounded shadow-sm p-10 p-lg-15 mx-auto">
-						<!--begin::Form-->
-						<form class="form w-100" novalidate="novalidate" id="kt_sign_in_form" data-kt-redirect-url="jet-master/index.html" action="#">
-							<!--begin::Heading-->
-							<div class="text-center mb-10">
-								<!--begin::Title-->
-								<h1 class="text-dark mb-3">Ingreso a Modas Marlench</h1>
-								<!--end::Title-->
-								<!--begin::Link-->
-								<div class="text-gray-400 fw-bold fs-4">¿Nuevo aquí? 
-								<a href="/authentication/base/sign-up" class="link-primary fw-bolder">Cree una cuenta</a></div>
-								<!--end::Link-->
-							</div>
-							<!--begin::Heading-->
-							<!--begin::Input group-->
-							<div class="fv-row mb-10">
-								<!--begin::Label-->
-								<label class="form-label fs-6 fw-bolder text-dark">Usuario</label>
-								<!--end::Label-->
-								<!--begin::Input-->
-								<input class="form-control form-control-lg form-control-solid" type="text" name="user" autocomplete="off" />
-								<!--end::Input-->
-							</div>
-							<!--end::Input group-->
-							<!--begin::Input group-->
-							<div class="fv-row mb-10">
-								<!--begin::Wrapper-->
-								<div class="d-flex flex-stack mb-2">
-									<!--begin::Label-->
-									<label class="form-label fw-bolder text-dark fs-6 mb-0">Contraseña</label>
-									<!--end::Label-->
-									<!--begin::Link-->
-									<a href="/jet-master/authentication/sign-in/password-reset.html" class="link-primary fs-6 fw-bolder">¿Olvidó su contraseña?</a>
-									<!--end::Link-->
-								</div>
-								<!--end::Wrapper-->
-								<!--begin::Input-->
-								<input class="form-control form-control-lg form-control-solid" type="password" name="password" autocomplete="off" />
-								<!--end::Input-->
-							</div>
-							<!--end::Input group-->
-							<!--begin::Actions-->
-							<div class="text-center">
-								<!--begin::Submit button-->
-								<button type="submit" id="kt_sign_in_submit" class="btn btn-lg btn-primary w-100 mb-5">
+    <!--End::Google Tag Manager (noscript) -->
+    <!--begin::Main-->
+    <div class="d-flex flex-column flex-root">
+        <!--begin::Authentication - Sign-in -->
+        <div class="d-flex flex-column flex-column-fluid bgi-position-y-bottom position-x-center bgi-no-repeat bgi-size-contain bgi-attachment-fixed" style="background-image: url(/jet-master/assets/media/illustrations/sigma-1/14.png)">
+            <!--begin::Content-->
+            <div class="d-flex flex-center flex-column flex-column-fluid p-10 pb-lg-20">
+                <!--begin::Logo-->
+                <a href="/index" class="mb-12">
+                    <img alt="Logo" src="/jet-master/assets/media/logos/logo-default.svg" class="h-60px" />
+                </a>
+                <!--end::Logo-->
+                <!--begin::Wrapper-->
+                <div class="w-lg-500px bg-body rounded shadow-sm p-10 p-lg-15 mx-auto">
+                    <!--begin::Form-->
+                    <form class="form w-100" novalidate="novalidate" id="kt_sign_in_form" data-kt-redirect-url="jet-master/index.html" action="#">
+                        <!--begin::Heading-->
+                        <div class="text-center mb-10">
+                            <!--begin::Title-->
+                            <h1 class="text-dark mb-3">Ingreso a Modas Marlench</h1>
+                            <!--end::Title-->
+                            <!--begin::Link-->
+                            <div class="text-gray-400 fw-bold fs-4">¿Nuevo aquí2?
+                                <a href="/authentication/base/sign-up" class="link-primary fw-bolder">Cree una cuenta</a></div>
+                            <!--end::Link-->
+                        </div>
+                        <!--begin::Heading-->
+                        <!--begin::Input group-->
+                        <div class="fv-row mb-10">
+                            <!--begin::Label-->
+                            <label class="form-label fs-6 fw-bolder text-dark">Usuario</label>
+                            <!--end::Label-->
+                            <!--begin::Input-->
+                            <input class="form-control form-control-lg form-control-solid" type="text" name="user" autocomplete="off" />
+                            <!--end::Input-->
+                        </div>
+                        <!--end::Input group-->
+                        <!--begin::Input group-->
+                        <div class="fv-row mb-10">
+                            <!--begin::Wrapper-->
+                            <div class="d-flex flex-stack mb-2">
+                                <!--begin::Label-->
+                                <label class="form-label fw-bolder text-dark fs-6 mb-0">Contraseña</label>
+                                <!--end::Label-->
+                                <!--begin::Link-->
+                                <a href="/jet-master/authentication/sign-in/password-reset.html" class="link-primary fs-6 fw-bolder">¿Olvidó su contraseña?</a>
+                                <!--end::Link-->
+                            </div>
+                            <!--end::Wrapper-->
+                            <!--begin::Input-->
+                            <input class="form-control form-control-lg form-control-solid" type="password" name="password" autocomplete="off" />
+                            <!--end::Input-->
+                        </div>
+                        <!--end::Input group-->
+                        <!--begin::Actions-->
+                        <div class="text-center">
+                            <!--begin::Submit button-->
+                            <button type="submit" id="kt_sign_in_submit" class="btn btn-lg btn-primary w-100 mb-5">
 									<span class="indicator-label">Continuar</span>
 									<span class="indicator-progress">Por favor espere... 
 									<span class="spinner-border spinner-border-sm align-middle ms-2"></span></span>
 								</button>
-								<!--end::Submit button-->																
-							</div>
-							<!--end::Actions-->
-						</form>
-						<!--end::Form-->
-					</div>
-					<!--end::Wrapper-->
-				</div>
-				<!--end::Content-->
-				<!--begin::Footer-->
-				<div class="d-flex flex-center flex-column-auto p-10">
-					<!--begin::Links-->
-					<div class="d-flex align-items-center fw-bold fs-6">
-						<a href="#" class="text-muted text-hover-primary px-2">Sobre nosotros</a>
-						<a href="#" class="text-muted text-hover-primary px-2">Soporte</a>
-						<a href="#" class="text-muted text-hover-primary px-2">Compras</a>
-					</div>
-					<!--end::Links-->
-				</div>
-				<!--end::Footer-->
-			</div>
-			<!--end::Authentication - Sign-in-->
-		</div>
-		<!--end::Main-->
-		<!--begin::Javascript-->
-		<script>var hostUrl = "/jet-master/assets/";</script>
-		<!--begin::Global Javascript Bundle(used by all pages)-->
-		<script src="/jet-master/assets/plugins/global/plugins.bundle.js"></script>
-		<script src="/jet-master/assets/js/scripts.bundle.js"></script>
-		<!--end::Global Javascript Bundle-->
-		<!--begin::Page Custom Javascript(used by this page)-->
-		<script src="/jet-master/assets/js/custom/authentication/sign-in/general.js"></script>
-		<!--end::Page Custom Javascript-->
-		<!--end::Javascript-->
-	</body>
-	<!--end::Body-->
+                            <!--end::Submit button-->
+                        </div>
+                        <!--end::Actions-->
+                    </form>
+                    <!--end::Form-->
+                </div>
+                <!--end::Wrapper-->
+            </div>
+            <!--end::Content-->
+            <!--begin::Footer-->
+            <div class="d-flex flex-center flex-column-auto p-10">
+                <!--begin::Links-->
+                <div class="d-flex align-items-center fw-bold fs-6">
+                    <a href="#" class="text-muted text-hover-primary px-2">Sobre nosotros</a>
+                    <a href="#" class="text-muted text-hover-primary px-2">Soporte</a>
+                    <a href="#" class="text-muted text-hover-primary px-2">Compras</a>
+                </div>
+                <!--end::Links-->
+            </div>
+            <!--end::Footer-->
+        </div>
+        <!--end::Authentication - Sign-in-->
+    </div>
+    <!--end::Main-->
+    <!--begin::Javascript-->
+    <script>
+        var hostUrl = "/jet-master/assets/";
+    </script>
+    <!--begin::Global Javascript Bundle(used by all pages)-->
+    <script src="/jet-master/assets/plugins/global/plugins.bundle.js"></script>
+    <script src="/jet-master/assets/js/scripts.bundle.js"></script>
+    <!--end::Global Javascript Bundle-->
+    <!--begin::Page Custom Javascript(used by this page)-->
+    <script src="/jet-master/assets/js/custom/authentication/sign-in/general.js"></script>
+    <!--end::Page Custom Javascript-->
+    <!--end::Javascript-->
+</body>
+<!--end::Body-->
+
 </html>
