--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ instagram: www.instagram.com/codacodpe
                             <h1 class="text-dark mb-3">Ingreso a Modas Marlench</h1>
                             <!--end::Title-->
                             <!--begin::Link-->
-                            <div class="text-gray-400 fw-bold fs-4">¿Nuevo aquí2?
+                            <div class="text-gray-400 fw-bold fs-4">¿ Nuevo aquí ?
                                 <a href="/authentication/base/sign-up" class="link-primary fw-bolder">Cree una cuenta</a></div>
                             <!--end::Link-->
                         </div>
