--- a/jet-master/authentication/sign-in/password-reset.html
+++ b/jet-master/authentication/sign-in/password-reset.html
@@ -72,7 +72,7 @@ instagram: www.instagram.com/codacodpe
                 <!--begin::Wrapper-->
                 <div class="w-lg-500px bg-body rounded shadow-sm p-10 p-lg-15 mx-auto">
                     <!--begin::Form-->
-                    <form class="form w-100" novalidate="novalidate" id="kt_password_reset_form" data-kt-redirect-url="jet-master/index.html">
+                    <form class="form w-100" novalidate="novalidate" id="kt_password_reset_form" data-kt-redirect-url="/index.html">
                         <!--begin::Heading-->
                         <div class="text-center mb-10">
                             <!--begin::Title-->
@@ -96,7 +96,7 @@ instagram: www.instagram.com/codacodpe
 									<span class="indicator-progress">Por favor espere... 
 									<span class="spinner-border spinner-border-sm align-middle ms-2"></span></span>
 								</button>
-                            <a href="/jet-master/authentication/base/sign-in" class="btn btn-lg btn-light-primary fw-bolder">Cancelar</a>
+                            <a href="/index.html" class="btn btn-lg btn-light-primary fw-bolder">Cancelar</a>
                         </div>
                         <!--end::Actions-->
                     </form>
