--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ instagram: www.instagram.com/codacodpe
                             <!--end::Title-->
                             <!--begin::Link-->
                             <div class="text-gray-400 fw-bold fs-4">¿ Nuevo aquí ?
-                                <a href="/authentication/base/sign-up" class="link-primary fw-bolder">Cree una cuenta</a></div>
+                                <a href="/jet-master/authentication/sign-in/password-reset.html" class="link-primary fw-bolder">Cree una cuenta</a></div>
                             <!--end::Link-->
                         </div>
                         <!--begin::Heading-->
