--- a/jet-master/index.html
+++ b/jet-master/index.html
@@ -12,7 +12,7 @@ instagram: www.instagram.com/codacodpe
 <!--begin::Head-->
 
 <head>
-    <title>Marlench APP - Registro</title>
+    <title>Marlench APP - Inicio</title>
     <meta charset="utf-8" />
     <meta name="description" content="Marlench App es una aplicación de apoyo a los colaboradores del banco BBVA para la automatización de solicitud de prendas" />
     <meta name="keywords" content="Marlench App, BBVA, Modas Marlench" />
