--- a/jet-master/index.html
+++ b/jet-master/index.html
@@ -2852,20 +2852,18 @@ instagram: www.instagram.com/codacodpe
                                     </div>
                                     <!--end::Header-->
                                     <!--begin::Block-->
-                                    <div class="py-5">
-                                        <div class="rounded border p-10">
-                                            <div class="d-flex flex-wrap align-items-center">
-                                                <div class="opacity-0-hover bg-primary text-white w-100px h-100px d-flex flex-center p-3 me-5 mb-5 fw-bold">.opacity-0-hover</div>
-                                                <div class="opacity-5-hover bg-primary text-white w-100px h-100px d-flex flex-center p-3 me-5 mb-5 fw-bold">.opacity-5-hover</div>
-                                                <div class="opacity-10-hover bg-primary text-white w-100px h-100px d-flex flex-center p-3 me-5 mb-5 fw-bold">.opacity-10-hover</div>
-                                                <div class="opacity-15-hover bg-primary text-white w-100px h-100px d-flex flex-center p-3 me-5 mb-5 fw-bold">.opacity-15-hover</div>
-                                                <div class="opacity-20-hover bg-primary text-white w-100px h-100px d-flex flex-center p-3 me-5 mb-5 fw-bold">.opacity-20-hover</div>
-                                                <div class="opacity-25-hover bg-primary text-white w-100px h-100px d-flex flex-center p-3 me-5 mb-5 fw-bold">.opacity-25-hover</div>
-                                                <div class="opacity-50-hover bg-primary text-white w-100px h-100px d-flex flex-center p-3 me-5 mb-5 fw-bold">.opacity-50-hover</div>
-                                                <div class="opacity-75-hover bg-primary text-white w-100px h-100px d-flex flex-center p-3 me-5 mb-5 fw-bold">.opacity-75-hover</div>
-                                                <div class="opacity-100-hover bg-primary text-white w-100px h-100px d-flex flex-center p-3 me-5 mb-5 fw-bold">.opacity-100-hover</div>
-                                            </div>
+                                    <div class="p-10 mx-auto">
+
+                                        <div class="d-flex flex-wrap align-items-center">
+                                            <a href="#">
+                                                <div class="opacity-50-hover w-200px h-200px d-flex flex-center p-3 me-5 mb-5 bgi-no-repeat bgi-size-contain bgi-position-center" style="background-image:url('/jet-master/assets/media/illustrations/unitedpalms-1/2.png')"></div>
+                                            </a>
+                                            <div class="opacity-50-hover bg-primary text-white w-200px h-200px d-flex flex-center p-3 me-5 mb-5 fw-bold">.opacity-50-hover</div>
+                                            <div class="opacity-50-hover bg-primary text-white w-200px h-200px d-flex flex-center p-3 me-5 mb-5 fw-bold">.opacity-50-hover</div>
+                                            <div class="opacity-50-hover bg-primary text-white w-200px h-200px d-flex flex-center p-3 me-5 mb-5 fw-bold">.opacity-50-hover</div>
+                                            <div class="opacity-50-hover bg-primary text-white w-200px h-200px d-flex flex-center p-3 me-5 mb-5 fw-bold">.opacity-50-hover</div>
                                         </div>
+
                                     </div>
                                     <!--end::Block-->
                                 </div>
