--- a/jet-master/index.html
+++ b/jet-master/index.html
@@ -1148,7 +1148,7 @@ instagram: www.instagram.com/codacodpe
                                 <li class="breadcrumb-item text-muted">
                                     <a href="/jet-master" class="text-muted">Home</a>
                                 </li>
-                                <li class="breadcrumb-item text-muted">/jet-master/dashboards</li>
+                                <li class="breadcrumb-item text-muted">Dashboards</li>
                                 <li class="breadcrumb-item text-dark">Multipurpose</li>
                             </ul>
                             <!--end::Breadcrumb-->
