--- a/jet-master/index.html
+++ b/jet-master/index.html
@@ -2856,7 +2856,7 @@ instagram: www.instagram.com/codacodpe
 
                                         <div class="d-flex flex-wrap align-items-center">
                                             <a href="#">
-                                                <div class="opacity-50-hover w-200px h-200px d-flex flex-center p-3 me-5 mb-5 bgi-no-repeat bgi-size-contain bgi-position-center" style="background-image:url('/jet-master/assets/media/illustrations/unitedpalms-1/2.png')"></div>
+                                                <div class="border border-primary opacity-50-hover w-200px h-200px d-flex flex-center p-3 me-5 mb-5 bgi-no-repeat bgi-size-contain bgi-position-center" style="background-image:url('/jet-master/assets/media/illustrations/unitedpalms-1/2.png')"></div>
                                             </a>
                                             <div class="opacity-50-hover bg-primary text-white w-200px h-200px d-flex flex-center p-3 me-5 mb-5 fw-bold">.opacity-50-hover</div>
                                             <div class="opacity-50-hover bg-primary text-white w-200px h-200px d-flex flex-center p-3 me-5 mb-5 fw-bold">.opacity-50-hover</div>
