--- a/jet-master/index.html
+++ b/jet-master/index.html
@@ -2864,7 +2864,7 @@ instagram: www.instagram.com/codacodpe
                                                 <a href="#">
                                                     <div class="border border-primary border-3 rounded-3 opacity-50-hover w-200px h-200px d-flex flex-center  bgi-no-repeat bgi-size-contain bgi-position-center" style="background-image:url('/jet-master/assets/media/illustrations/unitedpalms-1/3.png')"></div>
                                                 </a>
-                                                <div class="text-gray-700 fs-5 fw-boldest mt-3">Historial</div>
+                                                <div class="text-gray-700 fs-5 fw-boldest mt-3">Ver historial</div>
                                             </div>
                                             <div class="p-3 me-5 mb-5" style="text-align: center;">
                                                 <a href="#">
