--- a/jet-master/index.html
+++ b/jet-master/index.html
@@ -102,7 +102,7 @@ instagram: www.instagram.com/codacodpe
                                     <div class="menu-sub menu-sub-dropdown w-225px px-1 py-4">
                                         <div class="menu-item">
                                             <div class="menu-content">
-                                                <span class="menu-section fs-5 fw-bolder ps-1 py-1">Dashboards</span>
+                                                <span class="menu-section fs-5 fw-bolder ps-1 py-1">Aplicaciones</span>
                                             </div>
                                         </div>
                                         <div class="menu-item">
@@ -110,7 +110,7 @@ instagram: www.instagram.com/codacodpe
                                                 <span class="menu-bullet">
 														<span class="bullet bullet-dot"></span>
                                                 </span>
-                                                <span class="menu-title">Multipurpose</span>
+                                                <span class="menu-title">Menú principal</span>
                                             </a>
                                         </div>
                                         <div class="menu-item">
@@ -118,7 +118,7 @@ instagram: www.instagram.com/codacodpe
                                                 <span class="menu-bullet">
 														<span class="bullet bullet-dot"></span>
                                                 </span>
-                                                <span class="menu-title">Projects</span>
+                                                <span class="menu-title">Nueva solicitud</span>
                                             </a>
                                         </div>
                                         <div class="menu-item">
@@ -126,7 +126,7 @@ instagram: www.instagram.com/codacodpe
                                                 <span class="menu-bullet">
 														<span class="bullet bullet-dot"></span>
                                                 </span>
-                                                <span class="menu-title">Logistics</span>
+                                                <span class="menu-title">Historial</span>
                                             </a>
                                         </div>
                                         <div class="menu-item">
@@ -134,7 +134,7 @@ instagram: www.instagram.com/codacodpe
                                                 <span class="menu-bullet">
 														<span class="bullet bullet-dot"></span>
                                                 </span>
-                                                <span class="menu-title">Store Analytics</span>
+                                                <span class="menu-title">Solicitudes extras</span>
                                             </a>
                                         </div>
                                         <div class="menu-item">
@@ -142,7 +142,7 @@ instagram: www.instagram.com/codacodpe
                                                 <span class="menu-bullet">
 														<span class="bullet bullet-dot"></span>
                                                 </span>
-                                                <span class="menu-title">Finance Performance</span>
+                                                <span class="menu-title">Ajustes</span>
                                             </a>
                                         </div>
                                     </div>
@@ -1140,16 +1140,14 @@ instagram: www.instagram.com/codacodpe
                         <!--begin::Page title-->
                         <div class="page-title d-flex flex-column align-items-start justify-content-center flex-wrap me-lg-2 pb-2 pb-lg-0" data-kt-swapper="true" data-kt-swapper-mode="prepend" data-kt-swapper-parent="{default: '#kt_content_container', lg: '#kt_header_container'}">
                             <!--begin::Heading-->
-                            <h1 class="text-dark fw-bolder my-1 fs-2">Welcome to Jet
+                            <h1 class="text-dark fw-bolder my-1 fs-2">Bienvenido(a) a Marlench App
                                 <small class="text-muted fs-6 fw-normal ms-1"></small></h1>
                             <!--end::Heading-->
                             <!--begin::Breadcrumb-->
                             <ul class="breadcrumb fw-bold fs-base my-1">
                                 <li class="breadcrumb-item text-muted">
-                                    <a href="/jet-master" class="text-muted">Home</a>
+                                    <a href="/jet-master" class="text-muted">Menú principal</a>
                                 </li>
-                                <li class="breadcrumb-item text-muted">Dashboards</li>
-                                <li class="breadcrumb-item text-dark">Multipurpose</li>
                             </ul>
                             <!--end::Breadcrumb-->
                         </div>
